@@ -28,6 +28,10 @@ import org.apache.tinkerpop.gremlin.tinkergraph.process.computer.TinkerMemory;
 import org.apache.tinkerpop.gremlin.tinkergraph.process.computer.TinkerMessenger;
 import org.apache.tinkerpop.gremlin.tinkergraph.process.computer.TinkerReduceEmitter;
 import org.apache.tinkerpop.gremlin.tinkergraph.process.computer.TinkerWorkerPool;
+import org.apache.tinkerpop.gremlin.tinkergraph.services.TinkerDegreeCentralityFactory;
+import org.apache.tinkerpop.gremlin.tinkergraph.services.TinkerServiceRegistry;
+import org.apache.tinkerpop.gremlin.tinkergraph.services.TinkerTextSearchFactory;
+import org.apache.tinkerpop.gremlin.tinkergraph.services.TinkerVectorSearchFactory;
 import org.apache.tinkerpop.gremlin.tinkergraph.structure.TinkerEdge;
 import org.apache.tinkerpop.gremlin.tinkergraph.structure.TinkerElement;
 import org.apache.tinkerpop.gremlin.tinkergraph.structure.TinkerFactory;
@@ -57,6 +61,10 @@ public final class TinkerGraphGremlinPlugin extends AbstractGremlinPlugin {
                     TinkerIoRegistryV1.class,
                     TinkerIoRegistryV2.class,
                     TinkerIoRegistryV3.class,
+                    TinkerVectorSearchFactory.class,
+                    TinkerTextSearchFactory.class,
+                    TinkerDegreeCentralityFactory.class,
+                    TinkerServiceRegistry.TinkerServiceFactory.class,
                     TinkerProperty.class,
                     TinkerVertex.class,
                     TinkerVertexProperty.class,
